overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,9 @@
     font-size: 1em;
     height: 100vh;
 
-    overflow: hidden;
+    
     position: relative;
-    overflow: auto;
+    
 
     overflow-x: none;
     -webkit-font-smoothing: antialiased;
